Première fournée correction dette technique. Refactoring du code pour améliorer la lisibilité de ce dernier coté core Correction sur l'export / import : les images n'étaient pas bien liées à la campagne lors de l'export / import et provoquait un bug d'affichage des images lorsqu'on voulait ouvrir une campagne importée.